--- a/Client/package.json
+++ b/Client/package.json
@@ -14,9 +14,11 @@
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "json-server": "^1.0.0-beta.1",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
